--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "@ant-design/pro-components": "^2.8.1",
     "@babel/preset-react": "^7.25.9",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroicons/react": "^1.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.21.5",
     "axios": "^1.7.7",
+    "jsdom": "^25.0.1",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -24,8 +26,7 @@
     "react-pin-input": "^1.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^5.0.1",
-    "jsdom": "^25.0.1"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
